Fetch loaded mod props with getLoadedModulePropertyList
Create the getLoadedModulePropertyList procedure to fetch the different
loaded module properties. getLoadedModulePropertyList replaces the
specific procedure used for each property kind.

--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -64,7 +64,7 @@ proc getSimplifiedLoadedModuleList {} {
    set curr_mod_list {}
    array set curr_tag_arr {}
    set modpathlist [getModulePathList]
-   foreach mod [getLoadedModuleList] {
+   foreach mod [getLoadedModulePropertyList name] {
       set altandsimplist [getLoadedAltAndSimplifiedName $mod]
 
       set parentmod [file dirname $mod]
