--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -499,7 +499,7 @@ proc module {command args} {
                # on unload mode, unload mods in reverse order, if loaded
                # prior this mod, if not user asked and not required by
                # other loaded mods
-               set modlist [getLoadedModuleList]
+               set modlist [getLoadedModulePropertyList name]
                set modidx [lsearch -exact $modlist [currentState modulename]]
                if {$modidx != 0} {
                   set priormodlist [lrange $modlist 0 $modidx]
@@ -595,7 +595,7 @@ proc module {command args} {
                      reload restore]} {
                      # unload mod if it was loaded prior this mod, not user
                      # asked and not required by another loaded module
-                     set modlist [getLoadedModuleList]
+                     set modlist [getLoadedModulePropertyList name]
                      set modidx [lsearch -exact $modlist [currentState\
                         modulename]]
                      if {$modidx != 0} {
