--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -1636,7 +1636,8 @@ proc is-loaded {args} {
       }
    }
    # is something loaded whatever it is?
-   return [expr {[llength $args] == 0 && [llength [getLoadedModuleList]] > 0}]
+   return [expr {[llength $args] == 0 && [llength\
+      [getLoadedModulePropertyList name]] > 0}]
 }
 
 proc is-loading {args} {
