Record init state in __MODULES_LMINIT
During the autoinit sub-command, record the initial loaded state (state
obtained after evaluating modulespath and initrc initialization files)
in the __MODULES_LMINIT environment variable.

The initial loaded state is formed as a collection content, describing
the enabled modulepaths and the loaded modules with the tags applied to
these modules.

__MODULES_LMINIT is a colon-separated list. Each entry corresponding to
a 'module use' or 'module load' collection line.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1622,6 +1622,22 @@ proc getLoadedModuleWithVariantSaveTagArrayList {} {
    return [array get tag_arr]
 }
 
+# get current loaded state to record it as the virtual init collection
+proc getLoadedInit {} {
+   set ret [formatCollectionContent [getModulePathList returnempty 0]\
+      [getLoadedModuleWithVariantList]\
+      [getLoadedModuleWithVariantSaveTagArrayList] {}]
+
+   # remove ending newline in collection output
+   set ret [string trimright $ret \n]
+
+   # get init state as a string that can be registered in an env var translate
+   # tag list separator ':' into '<' and line split '\n' into ':'
+   set ret [string map {: < \n :} $ret]
+
+   return $ret
+}
+
 # register conflict violation state between loaded modules
 proc setModuleConflictViolation {mod modconlist} {
    reportDebug "set conflict violation state for '$mod'"
