--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1892,6 +1892,9 @@ proc cmdModuleAutoinit {} {
          cmdModuleSource load {@initrc@}
          lpopState commandname
       }
+
+      # record what has just been loaded in the virtual init collection
+      setenv __MODULES_LMINIT [getLoadedInit]
    # if user environment is already initialized, refresh the already loaded
    # modules unless if environment is inconsistent
    } elseif {![catch {cacheCurrentModules}]} {
