init: add reset subcmd to completion scripts

--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -156,6 +156,7 @@ _module() {
             'state:Display Modules state'
             'lint:Check syntax of modulefile'
             'mod-to-sh:Make shell code from modulefile env changes'
+            'reset:Restore initial environment'
          )
          # show commands only with compatible options
          if (( !$+opt_args[-h] && !$+opt_args[--help] \
