--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1778,6 +1778,7 @@ Loading / Unloading commands:
   reload                            Unload then load all loaded modulefiles
   switch | swap   [mod1] mod2       Unload mod1 and load mod2
   refresh                           Refresh loaded module volatile components
+  reset                             Restore initial environment
 
 Listing / Searching commands:
   list   [-a] [-t|-l|-j] [-S|-C] [mod ...]
