--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2713,6 +2713,9 @@ proc cmdModuleModToSh {shell args} {
    # to be output on report message channel
 }
 
+proc cmdModuleReset {} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
