Core code for cmdModuleReset
Implement reset sub-command as a 'module restore __init__'. Where
__init__ designates the virtual init collection made of the initial
environment state described in __MODULES_LMINIT.

readCollectionContent has been split to create parseCollectionContent
procedure which analyzes collection content passed as argument.

When __init__ collection is designated, cmdModuleRestore do not check
collection files but parseCollectionContent based on value fetched from
__MODULES_LMINIT environment variable.

--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -231,18 +231,22 @@ proc formatCollectionContent {path_list mod_list tag_arrser header {sgr 0}} {
 
 # read given collection file and return the path and module lists it defines
 proc readCollectionContent {collfile colldesc} {
-   # init lists (maybe coll does not set mod to load)
-   set path_list {}
-   set mod_list {}
-   set nuasked_list {}
-   array set tag_arr {}
-
    # read file
    if {[catch {
       set fdata [split [readFile $collfile] \n]
    } errMsg ]} {
       reportErrorAndExit "Collection $colldesc cannot be read.\n$errMsg"
    }
+
+   return [parseCollectionContent $fdata]
+}
+
+proc parseCollectionContent {fdata} {
+   # init lists (maybe coll does not set mod to load)
+   set path_list {}
+   set mod_list {}
+   set nuasked_list {}
+   array set tag_arr {}
 
    # analyze collection content
    foreach fline $fdata {
