gh: add missing xrdb tool to test x-resource on bionic

--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -24,7 +24,7 @@ jobs:
           sudo apt-get -y update
           sudo apt-get install -y expect-dev dejagnu python-sphinx bash tcsh ksh zsh fish tcl8.6 perl python ruby cmake r-base-core
           # add package to run tests in an X-enabled environment
-          sudo apt-get install -y xvfb
+          sudo apt-get install -y xvfb x11-xserver-utils
           # need to fix gems on bionic to avoid warning messages that broke output checks
           sudo gem update --system 3.0.8
           # remove snapd file that breaks fish shell on bionic (see https://bugs.launchpad.net/ubuntu/+source/snapd/+bug/1961365)
