ts: add autoinit tests for __MODULES_LMINIT

--- a/testsuite/example/initrc.in
+++ b/testsuite/example/initrc.in
@@ -30,6 +30,15 @@ if {[info exists env(TESTSUITE_INITRC)]} {
             module use [getenv TESTSUITEDIR]/modulefiles.3
             module load refresh/5.0
         }
+        tag1 {
+            module use [getenv TESTSUITEDIR]/modulefiles.3
+            module load foo/0.2
+            module load --tag=foo foo/0.load
+        }
+        variant1 {
+            module use [getenv TESTSUITEDIR]/modulefiles.3
+            module load variant/1.0 +foo bar=val1
+        }
     }
 }
 catch {module load unk}
