ts: add reset sub-cmd tests

--- a/testsuite/modulefiles.3/foo/.modulerc
+++ b/testsuite/modulefiles.3/foo/.modulerc
@@ -20,3 +20,7 @@ if {[info exists env(TESTSUITE_TAG_OPT)]} {
         }
     }
 }
+
+if {[info exists env(TESTSUITE_RESET_NOW_FORBIDDEN)]} {
+    module-forbid foo/0.2
+}
