--- a/testsuite/example/initrc.in
+++ b/testsuite/example/initrc.in
@@ -35,6 +35,9 @@ if {[info exists env(TESTSUITE_INITRC)]} {
             module load foo/0.2
             module load --tag=foo foo/0.load
         }
+        subcmd2 {
+            module reset
+        }
         variant1 {
             module use [getenv TESTSUITEDIR]/modulefiles.3
             module load variant/1.0 +foo bar=val1
