Same special treatment for reset than restore subcmd
Reports loads/unloads like restore sub-command. No auto unload of
modules if auto_handling is disabled.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -493,10 +493,10 @@ proc module {command args} {
                }
             # mods unload is handled via UReqUn mechanism when auto enabled
             # (unless if implicit_requirement has been inhibited) also unloads
-            # are triggered by ongoing reload, purge or restore commands
+            # are triggered by ongoing reload, purge, restore or reset cmds
             } elseif {(![getConf auto_handling] || [getState\
                inhibit_req_record] eq [currentState evalid]) &&\
-               [aboveCommandName] ni [list purge reload restore]} {
+               [aboveCommandName] ni [list purge reload restore reset]} {
                # on unload mode, unload mods in reverse order, if loaded
                # prior this mod, if not user asked and not required by
                # other loaded mods
@@ -589,11 +589,11 @@ proc module {command args} {
                   # module. If auto handling is enabled switched-on module
                   # is handled via UReqUn mechanism (unless if
                   # implicit_requirement has been inhibited). Also unloads are
-                  # triggered by ongoing reload, purge or restore commands
+                  # triggered by ongoing reload, purge, restore or reset cmds
                   if {(![getConf auto_handling] || [getState\
                      inhibit_req_record] eq [currentState evalid]) &&\
                      $swlomod ne {} && [aboveCommandName] ni [list purge\
-                     reload restore]} {
+                     reload restore reset]} {
                      # unload mod if it was loaded prior this mod, not user
                      # asked and not required by another loaded module
                      set modlist [getLoadedModulePropertyList name]
