--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -264,9 +264,9 @@ proc reportMsgRecord {header {hidden 0}} {
    # dependency evaluations which are reported by triggering top evaluation)
    # if hidden flag is enabled report only if verbosity >= verbose2
    } elseif {(!$hidden && ([isVerbosityLevel verbose] || ([isVerbosityLevel\
-      normal] && ([ongoingCommandName restore] || [ongoingCommandName\
-      source]) && $recid eq [topState msgrecordid]))) || ($hidden &&\
-      [isVerbosityLevel verbose2])} {
+      normal] && ([ongoingCommandName restore] || [ongoingCommandName source]\
+      || [ongoingCommandName reset]) && $recid eq [topState msgrecordid])))\
+      || ($hidden && [isVerbosityLevel verbose2])} {
       report $header
    }
 }
