ts: test 'module restore' without arg in initrc

--- a/testsuite/example/initrc.in
+++ b/testsuite/example/initrc.in
@@ -42,6 +42,12 @@ if {[info exists env(TESTSUITE_INITRC)]} {
             module use [getenv TESTSUITEDIR]/modulefiles.3
             module load variant/1.0 +foo bar=val1
         }
+        restorereset1 {
+            module restore
+        }
+        restorereset2 {
+            module restore __init__
+        }
     }
 }
 catch {module load unk}
