--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -739,16 +739,42 @@ proc cmdModuleSaverm {{coll default}} {
    }
 }
 
-proc cmdModuleSaveshow {{coll default}} {
-   # get corresponding collection, raise error if it does not exist
-   lassign [findCollections $coll exact 1] collfile colldesc
+proc cmdModuleSaveshow {args} {
+   # distinguish between zero and one argument provided
+   if {[llength $args] == 0} {
+      set arg_provided 0
+      set coll default
+   } else {
+      set arg_provided 1
+      set coll [lindex $args 0]
+   }
 
-   # read collection
-   lassign [readCollectionContent $collfile $colldesc] coll_path_list\
-      coll_mod_list coll_tag_arrser
+   if {$coll ne {__init__}} {
+      # get corresponding collection, raise error if it does not exist unless
+      # if no collection name has been provided
+      lassign [findCollections $coll exact $arg_provided] collfile colldesc
 
-   # collection should at least define a path or a mod
-   if {[llength $coll_path_list] == 0 && [llength $coll_mod_list] == 0} {
+      # if default collection does not exist and no collection name has been
+      # provided, restore initial environment
+      if {!$arg_provided && $collfile eq {}} {
+         set coll __init__
+      }
+   }
+
+   # read specific __init__ collection from __MODULES_LMINIT env var
+   if {$coll eq {__init__}} {
+      lassign [parseCollectionContent [getLoadedModulePropertyList init]]\
+         coll_path_list coll_mod_list coll_tag_arrser
+      set collfile {initial environment}
+   } else {
+      lassign [readCollectionContent $collfile $colldesc] coll_path_list\
+         coll_mod_list coll_tag_arrser
+   }
+
+   # collection should at least define a path or a mod, but initial env may be
+   # totally empty
+   if {$coll ne {__init__} && [llength $coll_path_list] == 0 && [llength\
+      $coll_mod_list] == 0} {
       reportErrorAndExit "$colldesc is not a valid collection"
    }
 
