Add reset_target_state configuration option
Add reset_target_state configuration option that defines the environment
state restored by the reset sub-command. Equals __init__ by default,
which means reset restore the initial environment by default.

Other valid values are __purge__, which means target state is purged
environment, and any existing collection name.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -99,6 +99,7 @@ array set g_config_defs [list\
    protected_envvars {MODULES_PROTECTED_ENVVARS <undef> 0}\
    rcfile {MODULERCFILE <undef> 0}\
    redirect_output {MODULES_REDIRECT_OUTPUT 1 0 {0 1}}\
+   reset_target_state {MODULES_RESET_TARGET_STATE __init__ 0}\
    quarantine_support {MODULES_QUARANTINE_SUPPORT @quarantinesupport@ 0 {0\
       1}}\
    run_quarantine {MODULES_RUN_QUARANTINE <undef> 0}\
