Allow unload of sticky modules on restore sub-cmd
Allow the unload of sticky modules when restoring collection. Goal is to
be able to restore designated collection as it was saved, thus without
the loaded sticky modules. If such collections were saved without the
sticky modules in it, it means that these sticky modules can safely be
unloaded when moving to the collection state.

As a result, using the --force option is of no use for restore
sub-command.

This change does not impact super-sticky modules. Such modules cannot be
unloaded during a restore, even if forced.

With this change, behavior of restore sub-command with sticky modules is
aligned with Lmod.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -219,7 +219,8 @@ proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
          lpopState modulefile
          knerror [getStickyUnloadMsg super-sticky]
       } elseif {[isModuleTagged $modname sticky 1] && [currentState\
-         reloading_sticky] ne $modname} {
+         reloading_sticky] ne $modname && [currentState unloading_sticky] ne\
+         $modname} {
          if {[getState force]} {
             reportWarning [getStickyForcedUnloadMsg]
          } else {
