--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -647,17 +647,14 @@ proc cmdModuleRestore {args} {
       } else {
          set modvr $mod
       }
-      if {[set sticky_reload [isStickinessReloading $modvr $mod_to_load]]} {
-         lappendState reloading_sticky $mod
-      }
+      # sticky modules can be unloaded when restoring collection
+      lappendState unloading_sticky $mod
       if {[set supersticky_reload [isStickinessReloading $modvr $mod_to_load\
          super-sticky]]} {
          lappendState reloading_supersticky $mod
       }
       cmdModuleUnload unload match 0 0 0 0 $mod
-      if {$sticky_reload} {
-         lpopState reloading_sticky
-      }
+      lpopState unloading_sticky
       if {$supersticky_reload} {
          lpopState reloading_supersticky
       }
