lint(ShellCheck): fix SC2166 warning
According to ShellCheck's documentation:

-a and -o  in [ .. ] test expressions are not well defined, and can cause
incorrect results when arguments start with dashes or contain !.

Related: https://www.shellcheck.net/wiki/SC2166
Related: #470

--- a/init/bash.in
+++ b/init/bash.in
@@ -24,7 +24,7 @@ if [ -n "${IFS+x}" ]; then
 fi;
 IFS=' ';
 for _mlv in ${MODULES_RUN_QUARANTINE:-}; do
-   if [ "${_mlv}" = "${_mlv##*[!A-Za-z0-9_]}" -a "${_mlv}" = "${_mlv#[0-9]}" ]; then
+   if [ "${_mlv}" = "${_mlv##*[!A-Za-z0-9_]}" ] && [ "${_mlv}" = "${_mlv#[0-9]}" ]; then
       if [ -n "$(eval 'echo ${'$_mlv'+x}')" ]; then
          _mlre="${_mlre:-}__MODULES_QUAR_${_mlv}='$(eval 'echo ${'$_mlv'}')' ";
       fi;
