--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -7,7 +7,7 @@ _module_comgen_words_and_files() {
     local setnospace=1
     # do not append space to word completed if it is a directory (ends with /)
     for val in $(compgen -W "$1" -- "$2"); do
-        if [ ! $setnospace -a "${val: -1:1}" = '/' ]; then
+        if [ ! $setnospace ] && [ "${val: -1:1}" = '/' ]; then
             # Bash >=4.0 is required for compopt
             type compopt &>/dev/null && compopt -o nospace
             setnospace=0
@@ -19,7 +19,7 @@ _module_comgen_words_and_files() {
 _module_avail() {
     local cur="${1:-}"
     # skip avail call if word currently being completed is an option keyword
-    if [ -z "$cur" -o "${cur:0:1}" != '-' ]; then
+    if [ -z "$cur" ] || [ "${cur:0:1}" != '-' ]; then
         module avail --color=never -s -t -S --no-indepth -o '' $cur 2>&1
     fi
 }
