--- a/init/ksh.in
+++ b/init/ksh.in
@@ -24,7 +24,7 @@ if [ -n "${IFS+x}" ]; then
 fi;
 IFS=' ';
 for _mlv in ${MODULES_RUN_QUARANTINE:-}; do
-   if [ "${_mlv}" = "${_mlv##*[!A-Za-z0-9_]}" -a "${_mlv}" = "${_mlv#[0-9]}" ]; then
+   if [ "${_mlv}" = "${_mlv##*[!A-Za-z0-9_]}" ] && [ "${_mlv}" = "${_mlv#[0-9]}" ]; then
       if [ -n "$(eval 'echo ${'$_mlv'+x}')" ]; then
          _mlre="${_mlre:-}__MODULES_QUAR_${_mlv}='$(eval 'echo ${'$_mlv'}')' ";
       fi;
