init: add vim modeline to {,b,k}sh scripts
... to enable correct syntax highlighting.

--- a/init/sh.in
+++ b/init/sh.in
@@ -69,3 +69,5 @@ if [ -n "${_mlshdbg:-}" ]; then
    set -$_mlshdbg;
    unset _mlshdbg;
 fi;
+
+# vim:set tabstop=3 shiftwidth=3 expandtab autoindent syntax=sh:
