--- a/init/bash.in
+++ b/init/bash.in
@@ -52,3 +52,5 @@ if [ -n "${_mlshdbg:-}" ]; then
    set -$_mlshdbg;
    unset _mlshdbg;
 fi;
+
+# vim:set tabstop=3 shiftwidth=3 expandtab autoindent syntax=sh:
