lint(ShellCheck): fix SC2148 error
According to ShellCheck's documentation:

Different shells support different features.  To give effective advice,
ShellCheck needs to know which shell your script is going to run on.

Related: https://www.shellcheck.net/wiki/SC2148
Related: #470

--- a/init/ksh.in
+++ b/init/ksh.in
@@ -1,3 +1,5 @@
+# shellcheck shell=ksh
+
 unset _mlshdbg;
 # disable shell debugging for the run of this init file
 if [ "${MODULES_SILENT_SHELL_DEBUG:-0}" = '1' ]; then
