--- a/init/profile.sh.in
+++ b/init/profile.sh.in
@@ -1,3 +1,5 @@
+# shellcheck shell=sh
+
 # get current shell name by querying shell variables or looking at parent
 # process name
 if [ -n "${BASH:-}" ]; then
