--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -102,8 +102,8 @@ _module() {
         else
             case "$cur" in
             # The mappings below are optional abbreviations for convenience
-            ls)     COMPREPLY="list";;      # map ls -> list
-            sw*)    COMPREPLY="switch";;
+            ls)     COMPREPLY=( "list" );;      # map ls -> list
+            sw*)    COMPREPLY=( "switch" );;
 
             -*)     COMPREPLY=( $(compgen -W "@comp_opts@" -- "$cur") );;
             *)      COMPREPLY=( $(compgen -W "@comp_opts@ @comp_cmds@" -- "$cur") );;
@@ -161,8 +161,8 @@ if $(type -t ml >/dev/null); then
             else
                 case "$cur" in
                 # The mappings below are optional abbreviations for convenience
-                ls)     COMPREPLY="list";;      # map ls -> list
-                sw*)    COMPREPLY="switch";;
+                ls)     COMPREPLY=( "list" );;      # map ls -> list
+                sw*)    COMPREPLY=( "switch" );;
 
                 -*)     COMPREPLY=( $(compgen -W "@comp_opts@" -- "$cur") )
                         loaded_modules=""
